--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-toastify": "^11.0.5",
     "sass": "^1.86.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
